# seed

./: .gitignore  .gitmodules  AGENT.md  CARTOUCHE.md  CLAUDE.md  COAX.md  COMMUNICATION.md  CONSTITUTION.md  CONVENTIONS.md  DISCOVERY.md  FORKS.md  HOLON.md  HOLON_BUILD.md  HOLON_COMMUNICATION_PROTOCOL.md  HOLON_DISCOVERY.md  HOLON_PACKAGE.md  HOLON_PROTO.md  HOLON_YAML.md  IDENTITY.md  INDEX.md  INSTANCES.md  MANIFEST.md  MCP.md  OBSERVABILITY.md  OBSERVABILITY_HANDBOOK.md  OP.md  PACKAGE.md  PROTO.md  PROTOCOL.md  README.md  SESSIONS.md  TDD.md  WHY.md  WORKFLOW.md  _IN_PROGRESS.md  go.work  go.work.sum  seed-toolchain.yaml
.bpds/: op_build_proto_generation.md
examples/cpp-hello-world/: .gitignore  CMakeLists.txt  HOLON.md  README.md  connect_example.cpp  hello.cpp  holon.yaml
examples/cpp-hello-world/build-codex-audit/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_hello
examples/hello-world/gabriel-greeting-c/: CMakeLists.txt  README.md
examples/hello-world/gabriel-greeting-c/api/: cli.c  cli.h  cli_test.c  public.c  public.h  public_test.c
examples/hello-world/gabriel-greeting-c/cmd/: backend_main.c  main.c
examples/hello-world/gabriel-greeting-c/internal/: greetings.c  greetings.h  server.c  server.h  server_test.c
examples/hello-world/gabriel-greeting-c/scripts/: generate_proto.sh
examples/hello-world/gabriel-greeting-cpp/: CMakeLists.txt  README.md
examples/hello-world/gabriel-greeting-cpp/api/: cli.cpp  cli.hpp  cli_test.cpp  public.cpp  public.hpp  public_test.cpp
examples/hello-world/gabriel-greeting-cpp/cmd/: main.cpp
examples/hello-world/gabriel-greeting-cpp/internal/: greetings.cpp  greetings.hpp  server.cpp  server.hpp  server_test.cpp
examples/hello-world/gabriel-greeting-cpp/scripts/: generate_proto.sh
examples/hello-world/gabriel-greeting-python/: README.md  pyproject.toml  support.py
examples/hello-world/gabriel-greeting-python/_internal/: __init__.py  greetings.py  server.py  server_test.py
examples/hello-world/gabriel-greeting-python/api/: __init__.py  cli.py  cli_test.py  public.py  public_test.py
examples/hello-world/gabriel-greeting-python/cmd/: main.py
examples/hello-world/gabriel-greeting-python/scripts/: generate_proto.sh
examples/hello-world/gabriel-greeting-rust/: Cargo.toml  README.md  build.rs
examples/hello-world/gabriel-greeting-rust/api/: cli.rs  cli_test.rs  public.rs  public_test.rs
examples/hello-world/gabriel-greeting-rust/cmd/: main.rs
examples/hello-world/gabriel-greeting-rust/internal/: greetings.rs  mod.rs  server.rs  server_test.rs
examples/hello-world/gabriel-greeting-rust/src/: lib.rs
examples/observability-cascade/observability-cascade-c/: CMakeLists.txt
examples/observability-cascade/observability-cascade-c/src/: main.cpp
examples/observability-cascade/observability-cascade-cpp/: CMakeLists.txt
examples/observability-cascade/observability-cascade-cpp/src/: main.cpp
examples/observability-cascade/observability-cascade-python/: pyproject.toml  requirements.txt
examples/observability-cascade/observability-cascade-python-node/: pyproject.toml  support.py
examples/observability-cascade/observability-cascade-python-node/_internal/: __init__.py  server.py
examples/observability-cascade/observability-cascade-python-node/api/: __init__.py  cli.py
examples/observability-cascade/observability-cascade-python/cmd/: main.py
examples/observability-cascade/observability-cascade-rust/: Cargo.toml  build.rs
examples/observability-cascade/observability-cascade-rust/src/: main.rs
examples/python-hello-world/: .gitignore  HOLON.md  README.md  connect_example.py  holon.yaml  pyproject.toml  server.py  test_server.py
examples/python-hello-world/api/: hello.proto
examples/relay-cascade/cascade-node-cpp/: CMakeLists.txt
examples/relay-cascade/cascade-node-cpp/api/: cli.cpp  cli.hpp  public.cpp
examples/relay-cascade/cascade-node-cpp/cmd/: main.cpp
examples/relay-cascade/cascade-node-cpp/internal/: server.cpp
examples/relay-cascade/cascade-node-rust/: Cargo.toml
examples/relay-cascade/cascade-node-rust/api/: cli.rs
examples/relay-cascade/cascade-node-rust/cmd/: main.rs
examples/relay-cascade/cascade-node-rust/internal/: server.rs
examples/relay-cascade/relay-cascade-rust/: Cargo.toml
examples/relay-cascade/relay-cascade-rust/src/: main.rs
examples/rust-hello-world/: .gitignore  Cargo.toml  HOLON.md  README.md  holon.yaml
examples/rust-hello-world/proto/: hello.proto
examples/rust-hello-world/src/: connect_example.rs  main.rs
sdk/cpp-holons/: .gitignore  CMakeLists.txt  Makefile  README.md
sdk/cpp-holons/cmd/echo-client-go/: main.go
sdk/cpp-holons/cmd/echo-server-go/: main.go
sdk/cpp-holons/cmd/holon-rpc-server-go/: main.go
sdk/cpp-holons/examples/: echo_server.cpp
sdk/cpp-holons/src/: serve.cpp
sdk/cpp-holons/templates/: describe.hpp.tmpl
sdk/cpp-holons/test/: holons_test.cpp  uniform_contract_test.cpp  uniform_echo_holon.cpp
sdk/python-holons/: .gitignore  README.md  pyproject.toml
sdk/python-holons/holons/: __init__.py  composite.py  connect.py  describe.py  discover.py  discovery_types.py  echo_client.py  echo_server.py  grpcclient.py  holonrpc.py  identity.py  observability.py  relay.py  serve.py  transport.py
sdk/python-holons/templates/: describe.py.tmpl
sdk/python-holons/tests/: _fixtures.py  test_composite.py  test_connect.py  test_describe.py  test_discover.py  test_echo_client.py  test_echo_server.py  test_grpc_interop.py  test_grpcclient.py  test_holonrpc.py  test_holonrpc_http.py  test_holonrpc_routing.py  test_holonrpc_server.py  test_identity.py  test_observability.py  test_resolve.py  test_serve.py  test_stdio_serve.py  test_transport.py
sdk/rust-holons/: .gitignore  Cargo.toml  README.md  build.rs
sdk/rust-holons/src/: command_channel.rs  composite.rs  connect.rs  describe.rs  discover.rs  discovery_types.rs  holonrpc.rs  identity.rs  lib.rs  observability.rs  relay.rs  serve.rs  test_support.rs  transport.rs
sdk/rust-holons/templates/: describe.rs.tmpl
sdk/rust-holons/tests/: certification.rs
(+2991 files in other folders)
