[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "python-hello-world-holon"
version = "0.1.0"
description = "Hello world holon in Python."
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.60.0",
  "grpcio-tools>=1.60.0",
  "grpcio-reflection>=1.60.0",
  "pyyaml>=6.0",
  "pytest>=8.0.0",
  "websockets>=12.0",
]
