[package]
name = "rust-hello-world"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello"
path = "src/main.rs"

[[bin]]
name = "connect_example"
path = "src/connect_example.rs"

[dependencies]
bytes = "1"
holons = { path = "../../sdk/rust-holons" }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"
