[package]
name = "holons"
version = "0.1.0"
edition = "2021"
description = "Organic Programming SDK for Rust"
license = "MIT"
authors = ["B. ALTER"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
tower-service = "0.3"
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }
rcgen = "0.13"
tokio-rustls = "0.26"
