[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gabriel-greeting-python"
version = "0.1.0"
description = "Gabriel greeting holon in Python."
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.60.0",
  "grpcio-tools>=1.60.0",
  "grpcio-reflection>=1.60.0",
  "protobuf>=5.0.0",
  "pyyaml>=6.0",
  "websockets>=12.0",
]
