[package]
name = "gabriel-greeting-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gabriel-greeting-rust"
path = "cmd/main.rs"

[dependencies]
holons = { path = "../../../sdk/rust-holons" }
prost = "0.13"
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tonic = { version = "0.12", features = ["transport"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-stream = { version = "0.1", features = ["net"] }
